# LF-Botonera-de-efectos

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPILAR.md  CONTRIBUTING.md  DEV.bat  MANUAL.md  POR_HACER.md  PRIVACY.md  README.md  SECURITY.md  SET-VERSION.bat  SET-VERSION.ps1  SUPPORT.md  Subir_a_GitHub.bat  THIRD_PARTY_LICENSES_NODE.html  THIRD_PARTY_LICENSES_RUST.html  THIRD_PARTY_NOTICES.md  audioEngine.js  index.html  main.js  package-lock.json  package.json  renderer.js  style.css  vite.config.js
src-tauri/: Cargo.toml  about.hbs  about.toml  build.rs  tauri.conf.json  windows-app-manifest.xml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_setup.rs  audio.rs  audio_analysis.rs  audio_command.rs  audio_decode.rs  audio_device.rs  audio_device_list.rs  audio_formats.rs  audio_monitor.rs  audio_ops.rs  audio_thread.rs  audio_thread_play.rs  button_defaults.rs  button_types.rs  cached_source.rs  cmd_audio.rs  cmd_button_flags.rs  cmd_button_playback.rs  cmd_button_types.rs  cmd_button_update.rs  cmd_export.rs  cmd_grid.rs  cmd_history.rs  cmd_keys.rs  cmd_local_shortcuts.rs  cmd_locutions.rs  cmd_master_volume.rs  cmd_meta.rs  cmd_paletas.rs  cmd_playback.rs  cmd_playback_progress.rs  cmd_preload.rs  cmd_profiles.rs  cmd_startup_prompts.rs  cmd_track_response.rs  cmd_tracks.rs  cmd_updates.rs  colors.rs  config.rs  config_history.rs  (+41 more)
src-tauri/tests/: clima_ciudades_reales.rs  consola_ruteo_real.rs  consola_tarjetas_reales.rs  consola_vumetros_real.rs  locuciones_carpeta_real.rs
src/js/: api.js  (+51 more)
(+333 files in other folders)
