[package]
name = "tauri-app"
version = "1.0.2"
description = "LF Botonera de Efectos — botonera de sonido para locutores y radio"
authors = ["Luis Fernando Velásquez"]
license = "GPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = { version = "0.19.0", features = ["symphonia-all"] }
symphonia = "0.5.5"
opus-decoder = "0.1.1"
tauri-plugin-dialog = "2.7.1"
rfd = "0.17.2"
lofty = "0.22"
ureq = { version = "2", features = ["json"] }
chrono = "0.4"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-global-shortcut = "2.3.2"
